JavaScriptCore/kjs/nodes.h
@@ -1448,6 +1448,7 @@ namespace JSC {
         {
         }
 
+        virtual RegisterID* emitCode(CodeGenerator&, RegisterID* = 0) JSC_FAST_CALL;
         virtual OpcodeID opcode() const JSC_FAST_CALL { return op_eq; }
         virtual void streamTo(SourceStream&) const JSC_FAST_CALL;
         virtual Precedence precedence() const { return PrecEquality; }
@@ -1472,6 +1473,7 @@ namespace JSC {
         {
         }
 
+        virtual RegisterID* emitCode(CodeGenerator&, RegisterID* = 0) JSC_FAST_CALL;
         virtual OpcodeID opcode() const JSC_FAST_CALL { return op_stricteq; }
         virtual void streamTo(SourceStream&) const JSC_FAST_CALL;
         virtual Precedence precedence() const { return PrecEquality; }
